added footer links

--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
             <div class="footer-content">
                 <p>© 2025 TestifyAPI | Built with ♥ by adina hawaldar</p>
                 <div class="footer-links">
-                    <a href="#">GitHub Repo</a>
-                    <a href="#">Docs</a>
-                    <a href="#">About</a>
+                    <a href="https://github.com/adinahawaldar/TestifyAPI">GitHub Repo</a>
+                    
                 </div>
             </div>
         </div>
